# Dackel

./: .gitignore  README.md  pyproject.toml
rules/: scanner_name.yaml
src/: __main__.py  app.py  rule.py
src/cli/: cli.py  sync_sources.py  upsert.py
src/endpoints/: cast.py
src/rule_sources/: sigmahq.py
