[project]
name = "dackel"
version = "0.1.0"
description = "Detection As Code for Kubernetes Events and Logs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "gitpython>=3.1.43",
    "polars>=1.17.1",
    "pyaml>=24.9.0",
    "pydantic-yaml>=1.4.0",
    "pydantic>=2.10.2",
    "pysigma>=0.11.18",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "typer>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
